--- a/On Watch/res/values/strings.xml
+++ b/On Watch/res/values/strings.xml
@@ -123,24 +123,25 @@ for more details.\n</string>
     <string name="title_timezone">Select a Time Zone</string>
 
     <!-- Passages. -->
-    <string name="passage_edit_title">Passage Editor</string>
-    <string name="passage_edit">Edit</string>
+    <string name="passage_start">Start</string>
+    <string name="passage_stop">Finish</string>
     <string name="passage_new">New</string>
-    <string name="passage_save">Save</string>
+    <string name="passage_edit">Edit</string>
     <string name="passage_delete">Delete</string>
-    <string name="passage_done">Done</string>
     <string name="lab_passage_start">Start:</string>
     <string name="lab_passage_end">End:</string>
     <string name="lab_passage_status">Status:</string>
-    <string name="lab_passage_name">Name:</string>
-    <string name="lab_passage_from">From:</string>
-    <string name="lab_passage_to">To:</string>
     <string name="lab_no_passage">Not under way.</string>
     <string name="lab_passage_not_started">Not started</string>
     <string name="lab_passage_under_way">Under way</string>
     <string name="lab_passage_finished">Finished</string>
-    <string name="passage_start">Start</string>
-    <string name="passage_stop">Finish</string>
+
+    <!-- Passage Editor. -->
+    <string name="passage_edit_title">Passage Editor</string>
+    <string name="passage_done">Done</string>
+    <string name="lab_passage_name">Name:</string>
+    <string name="lab_passage_from">From:</string>
+    <string name="lab_passage_to">To:</string>
 
     <!-- Crew Editor. -->
     <string name="msg_no_crew">No crew entered.</string>
