--- a/On Watch/res/values/strings.xml
+++ b/On Watch/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">On Watch</string>
-    <string name="description">A cruising sailor's watch buddy.</string>
+    <string name="description">A cruising sailor\'s watch buddy.</string>
 
 
     <string name="eula_title">NOT FOR NAVIGATION</string>
@@ -137,7 +137,9 @@ for more details.\n</string>
     <string name="lab_passage_finished">Finished</string>
 
     <!-- Passage Editor. -->
-    <string name="passage_edit_title">Passage Editor</string>
+    <string name="passage_edit_title">Edit passage</string>
+    <string name="passage_new_title">Create passage</string>
+    <string name="passage_error_title">Error loading passage</string>
     <string name="passage_done">Done</string>
     <string name="lab_passage_name">Name:</string>
     <string name="lab_passage_from">From:</string>
