--- a/Test Card/res/values/strings.xml
+++ b/Test Card/res/values/strings.xml
@@ -21,6 +21,15 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License at http://www.gnu.org/licenses/gpl-2.0.html
 for more details.\n</string>
 
+    
+    <!-- "New features" dialog. -->
+    <string name="newf_title">Welcome</string>
+    <string name="newf_text">This app displays a very simple screen test
+pattern, which may be interesting on some devices (and very
+boring on others).\n\
+\n\
+<b>Please read the help for more information.</b></string>
+
 
     <!-- Menu strings. -->
     <string name="menu_prefs">Settings</string>
