Tricorder: implemented CDMA sig strength and cell ID.  Needs calibration.

--- a/Tricorder/res/values/strings.xml
+++ b/Tricorder/res/values/strings.xml
@@ -9,7 +9,7 @@
 (headstay).  Inspired by:\n\
 \n\
 • Jeff Jetton\'s Tricorder for Palm Pilot: http://www.jeffjetton.com/tricorder/\n\
-• Adge's LCARS site: http://www.lcars.org.uk/\n\
+• Adge\'s LCARS site: http://www.lcars.org.uk/\n\
 • And, of course, the work of Gene Roddenberry\n\
 \n\
 For information and source code see the project home page.\n\
