--- a/Dazzle/res/values/strings.xml
+++ b/Dazzle/res/values/strings.xml
@@ -10,6 +10,15 @@
     <string name="widget_31_name">Dazzle (3x1)</string>
     <string name="widget_41_name">Dazzle (4x1)</string>
         
+    <!-- Preferences. -->
+    <string name="prefs_enable_wifi">WiFi</string>
+    <string name="prefs_wifi_summary">Show WiFi control</string>
+    <string name="prefs_enable_bluetooth">Bluetooth</string>
+    <string name="prefs_bluetooth_summary">Show Bluetooth control</string>
+    <string name="prefs_enable_brightness">Brightness</string>
+    <string name="prefs_brightness_summary">Show screen brightness control</string>
+    <string name="prefs_save">Save</string>
+
     <!-- Brightness button labels. -->
     <string name="button_low">Min</string>
     <string name="button_med">User</string>
