--- a/Dazzle/res/values/strings.xml
+++ b/Dazzle/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="prefs_bluetooth_summary">Show Bluetooth control</string>
     <string name="prefs_enable_gps">GPS</string>
     <string name="prefs_gps_summary">Show GPS control (takes you to the settings page)</string>
+    <string name="prefs_enable_airplane">Airplane</string>
+    <string name="prefs_airplane_summary">Show airplane mode control</string>
     <string name="prefs_enable_brightness">Brightness</string>
     <string name="prefs_brightness_summary">Show screen brightness control</string>
     <string name="prefs_save">Save</string>
