--- a/Dazzle/res/values/strings.xml
+++ b/Dazzle/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="prefs_airplane_summary">Show airplane mode control</string>
     <string name="prefs_enable_brightness">Brightness</string>
     <string name="prefs_brightness_summary">Show screen brightness control</string>
+    <string name="prefs_enable_brightauto">Brightness with auto</string>
+    <string name="prefs_brightauto_summary">Screen brightness control which can toggle auto mode; certain devices only</string>
     <string name="prefs_save">Save</string>
 
     <!-- Brightness button labels. -->
