--- a/Dazzle/res/values/strings.xml
+++ b/Dazzle/res/values/strings.xml
@@ -14,26 +14,44 @@
     <string name="prefs_help">Choose which controls you would like to have
 in this widget.  Note that you can have multiple copies of the widget with
 different controls.</string>
-    <string name="prefs_enable_ringer">Ringer mode</string>
-    <string name="prefs_ringer_summary">Show ring / silent / vibrate control</string>
+    <string name="prefs_enable_ringer">Ringer popup</string>
+    <string name="prefs_ringer_summary">Show ring / silent / vibrate control
+with popup mode selection</string>
+    <string name="prefs_enable_otringer">Ringer one-touch</string>
+    <string name="prefs_otringer_summary">Show ring / silent / vibrate control
+with one-touch mode toggle</string>
     <string name="prefs_enable_wifi">WiFi</string>
     <string name="prefs_wifi_summary">Show WiFi control</string>
     <string name="prefs_enable_bluetooth">Bluetooth</string>
     <string name="prefs_bluetooth_summary">Show Bluetooth control</string>
-    <string name="prefs_bluetooth_summary_nobt">Show Bluetooth control -- needs Android 2.0 or later</string>
+    <string name="prefs_bluetooth_summary_nobt">Show Bluetooth control -- needs
+Android 2.0 or later</string>
     <string name="prefs_enable_gps">GPS</string>
     <string name="prefs_gps_summary">Show GPS control (no indicator; takes you
-to the settings page.  Sorry, but only system apps can directly control the GPS)</string>
+to the settings page.  Sorry, but only system apps can directly control
+the GPS)</string>
     <string name="prefs_enable_airplane">Airplane mode</string>
     <string name="prefs_airplane_summary">Show airplane mode control</string>
     <string name="prefs_enable_sync">Sync</string>
     <string name="prefs_sync_summary">Show sync on/off control</string>
-    <string name="prefs_sync_summary_nosync">Sync on/off control -- needs Android 2.0 or later</string>
-    <string name="prefs_enable_brightness">Brightness</string>
-    <string name="prefs_brightness_summary">Show screen brightness control</string>
-    <string name="prefs_enable_brightauto">Brightness with auto</string>
-    <string name="prefs_brightauto_summary">Screen brightness control which can toggle auto mode; certain devices only</string>
-    <string name="prefs_brightauto_summary_noauto">Screen brightness with auto -- needs Android 2.0 or later</string>
+    <string name="prefs_sync_summary_nosync">Sync on/off control -- needs
+Android 2.0 or later</string>
+    <string name="prefs_enable_brightness">Brightness popup</string>
+    <string name="prefs_brightness_summary">Show screen brightness control
+with popup mode selection</string>
+    <string name="prefs_enable_otbrightness">Brightness one-touch</string>
+    <string name="prefs_otbrightness_summary">Show screen brightness control
+with one-touch mode toggle</string>
+    <string name="prefs_enable_brightauto">Brightness/auto popup</string>
+    <string name="prefs_brightauto_summary">Screen brightness control with
+popup mode selection including auto mode; certain devices only</string>
+    <string name="prefs_brightauto_summary_noauto">Screen brightness popup
+with auto -- needs Android 2.0 or later</string>
+    <string name="prefs_enable_otbrightauto">Brightness/auto one-touch</string>
+    <string name="prefs_otbrightauto_summary">Screen brightness control with
+one-touch mode toggle including auto mode; certain devices only</string>
+    <string name="prefs_otbrightauto_summary_noauto">Screen brightness
+one-touch with auto -- needs Android 2.0 or later</string>
     <string name="prefs_save">Save</string>
 
     <!-- Ringer button labels. -->
@@ -49,7 +67,6 @@ to the settings page.  Sorry, but only system apps can directly control the GPS)
     <string name="button_auto">Auto</string>
 
     <!-- Errors. -->
-    <string name="error_only_one">Sorry, there can be only one Dazzle at a time.</string>
     
 </resources>
 
