--- a/Dazzle/res/values/strings.xml
+++ b/Dazzle/res/values/strings.xml
@@ -20,6 +20,10 @@ with popup mode selection</string>
     <string name="prefs_enable_otringer">Ringer one-touch</string>
     <string name="prefs_otringer_summary">Show ring / silent / vibrate control
 with one-touch mode toggle</string>
+    <string name="prefs_enable_radio">Cellular</string>
+    <string name="prefs_radio_summary">Show data roaming/band control
+(depending on device) (no indicator; takes you to the settings page.  Sorry,
+but only system apps can directly control these settings)</string>
     <string name="prefs_enable_wifi">WiFi</string>
     <string name="prefs_wifi_summary">Show WiFi control</string>
     <string name="prefs_enable_bluetooth">Bluetooth</string>
