--- a/TouchTest/res/values/strings.xml
+++ b/TouchTest/res/values/strings.xml
@@ -1,9 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <resources>
-    
-<string name="app_name">Touch Test</string>
-<string name="app_desc">Test app for input touch events.</string>
 
+	<string name="app_name">Touch Test</string>
+	<string name="app_desc">Test app for input touch events.</string>
+
+    <string name="about_text"><b>Touch Test</b> by Ian Cameron Smith
+(headstay).\n\
+\n\
+A simple display and touchpanel test app, including multi-touch.
+For information and source code see the project home page.\n\
+\n\
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.\n\
+\n\
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License at http://www.gnu.org/licenses/gpl-2.0.html
+for more details.\n</string>
+
+
+    <!-- Menu Strings. -->
+
+    <string name="menu_help">Help</string>
+    <string name="menu_about">About</string>
+    <string name="menu_exit">Exit</string>
+                
+    <!-- Help strings. -->
+    <string name="help_title">Audalyzer User\'s Manual</string>
+            
+    <!-- Button strings. -->
+    <string name="button_ok">OK</string>
+    <string name="button_close">OK</string>
+    <string name="button_license">License</string>
+    <string name="button_homepage">Project</string>
+    
+    <!-- URLs. -->
+    <string name="url_license">http://www.gnu.org/licenses/gpl-2.0.html</string>
+    <string name="url_homepage">http://code.google.com/p/moonblink/wiki/TouchTest</string>
+    
 </resources>
 
