--- a/Plughole/res/values/strings.xml
+++ b/Plughole/res/values/strings.xml
@@ -67,21 +67,28 @@ for more details.\n</string>
 
     <!-- Preferences strings. -->
     <string name="prefs_title">Settings</string>
-    <string name="prefs_general">General</string>
+    <string name="prefs_cat_general">General Settings</string>
     <string name="prefs_sound">Sound level</string>
     <string name="prefs_sound_summary">Set your desired sound level</string>
     <string name="prefs_sound_title">Sound Level</string>
     <string name="prefs_vibe">Vibrate</string>
-    <string name="prefs_vibe_summary">Use vibrator feedback</string>
-    <string name="prefs_tilt">Device Tilt Control</string>
+    <string name="prefs_vibe_summary_off">No vibrator feedback</string>
+    <string name="prefs_vibe_summary_on">Use vibrator feedback</string>
+    <string name="prefs_cat_display">Display Settings</string>
+    <string name="prefs_wakelock">Keep device awake</string>
+    <string name="prefs_wakelock_summary_off">The device will sleep normally after the screen times out.</string>
+    <string name="prefs_wakelock_summary_on">The device will stay awake while the app is running.  Warning: battery drain!</string>
+    <string name="prefs_cat_tilt">Device Tilt Settings</string>
     <string name="prefs_recline">Set horizontal </string>
     <string name="prefs_recline_summary">Set \"horizontal\" to match your reclined state</string>
     <string name="prefs_recline_title">Recline Angle</string>
-    <string name="prefs_debug">Debug</string>
+    <string name="prefs_cat_debug">Debug Settings</string>
     <string name="prefs_perf">Show performance</string>
-    <string name="prefs_perf_summary">Display FPS and physics time</string>
+    <string name="prefs_perf_summary_off">No performance stats</string>
+    <string name="prefs_perf_summary_on">Display FPS and physics time</string>
     <string name="prefs_ulevel">User Levels</string>
-    <string name="prefs_ulevel_summary">Load levels from directory \"plughole\" on the SD card</string>
+    <string name="prefs_ulevel_summary_off">Only built-in levels will be used</string>
+    <string name="prefs_ulevel_summary_on">Load levels from directory \"plughole\" on the SD card</string>
 
     <!-- On-screen messages. -->
     <string name="mode_ready">Plughole\nTap Screen To Play</string>
