Tricorder: Chinese translations.  Not perfect yet.

--- a/Tricorder/res/values/strings.xml
+++ b/Tricorder/res/values/strings.xml
@@ -12,6 +12,8 @@
 • Adge\'s LCARS site: http://www.lcars.org.uk/\n\
 • And, of course, the work of Gene Roddenberry\n\
 \n\
+Chinese translation by HiAPK.com.\n\
+\n\
 For information and source code see the project home page.\n\
 \n\
 This program is free software; you can redistribute it and/or modify
