Scrambled Lite: Chinese translations.

--- a/Scrambled Net Lite/res/values/strings.xml
+++ b/Scrambled Net Lite/res/values/strings.xml
@@ -30,7 +30,7 @@ cells with 3 or 4 connections, the wiring is invisible.  Good luck!</string>
     <string name="about_text"><b>Scrambled Net Lite</b>, an Android puzzle
 game by Ian Cameron Smith.
 Inspired by KNetwalk by Andi Peredri, Thomas Nagy, and Reinhold Kainhofer.
-Includes MTRandom by David Beaumont.\n\
+Includes MTRandom by David Beaumont.  Chinese translation by HiAPK.com.\n\
 \n\
 For information and source code see the project home page.\n\
 \n\
