--- a/Scrambled Net Lite/res/values/strings.xml
+++ b/Scrambled Net Lite/res/values/strings.xml
@@ -3,13 +3,13 @@
 <resources>
 
     <!-- App title. -->
-    <string name="title">Scrambled Net Lite</string>
+    <string name="title">Scrambled Net</string>
     
     <string name="description">A computer networking puzzle game.</string>
 
 
     <!-- Splash screen / help text. -->
-    <string name="splash_text"><b>Scrambled Net Lite</b>\n\nConnect the
+    <string name="splash_text"><b>Scrambled Net</b>\n\nConnect the
 terminals to the server by rotating the tiles.  Touch a tile to rotate
 it; press and hold a tile to lock it when you think it\'s correct.
 Use the menu to select different skill levels, pause the game, or start
@@ -27,7 +27,7 @@ cells on the right edge connect to those on the left edge, and vice
 versa.  Similarly for the top and bottom edges.  But in addition, in
 cells with 3 or 4 connections, the wiring is invisible.  Good luck!</string>
        
-    <string name="about_text"><b>Scrambled Net Lite</b>, an Android puzzle
+    <string name="about_text"><b>Scrambled Net</b>, an Android puzzle
 game by Ian Cameron Smith.
 Inspired by KNetwalk by Andi Peredri, Thomas Nagy, and Reinhold Kainhofer.
 Includes MTRandom by David Beaumont.  Chinese translation by HiAPK.com.\n\
@@ -44,9 +44,32 @@ but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License at http://www.gnu.org/licenses/gpl-2.0.html
 for more details.\n</string>
-            
+
+    <string name="eula_title">License Agreement</string>
+    
+    <string name="eula_text">Scrambled Net is distributed in the hope
+that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License at http://www.gnu.org/licenses/gpl-2.0.html
+for more details.\n\
+\n\
+This program is open-source software.  The source code
+can be obtained on the project home page; see the About screen.</string>
+
     <!-- Help strings. -->
     <string name="help_title">Scrambled Net User\'s Manual</string>
+
+
+    <!-- Scores list strings. -->
+    <string name="scores_title">Personal Bests</string>
+    <string name="scores_clickstitle">Fewest Clicks</string>
+    <string name="scores_timestitle">Fastest Time</string>
+    <string name="scores_skill">Skill Level</string>
+    <string name="scores_clicks">Clicks</string>
+    <string name="scores_time">Time</string>
+    <string name="scores_when">When</string>
+    <string name="menu_scores_reset">Reset all scores</string>
         
 
     <!-- Text displayed in pause mode. -->
@@ -84,11 +107,16 @@ or "Continue" to experiment with this layout.</string>
     <string name="menu_show_scores">High scores</string>
     <string name="menu_set_skill">Skill level</string>
     <string name="menu_sound">Sound...</string>
+    <string name="menu_anim">Animation...</string>
+    <string name="menu_autosolve">Solve it!</string>
+    <string name="menu_stopsolve">Stop solving</string>
     <string name="menu_help">Help</string>
     <string name="menu_about">About</string>
     <string name="no_sounds">No sounds</string>
     <string name="quiet_sounds">Quiet sounds</string>
     <string name="play_sounds">Full sounds</string>
+    <string name="anim_off">No animation</string>
+    <string name="anim_on">Animation</string>
     
     
     <!-- Skill levels. -->
@@ -101,9 +129,5 @@ or "Continue" to experiment with this layout.</string>
     <!-- URLs. -->
     <string name="url_license">http://www.gnu.org/licenses/gpl-2.0.html</string>
     <string name="url_homepage">http://code.google.com/p/moonblink/wiki/ScrambledNet</string>
-    
-    <!--  
-    <string name="url_upgrade">http://market.android.com/search?q=pname:org.hermit.netscramblefull</string>
-     -->
 
 </resources>
