--- a/Dazzle/res/values/strings.xml
+++ b/Dazzle/res/values/strings.xml
@@ -20,10 +20,13 @@ with popup mode selection</string>
     <string name="prefs_enable_otringer">Ringer one-touch</string>
     <string name="prefs_otringer_summary">Show ring / silent / vibrate control
 with one-touch mode toggle</string>
-    <string name="prefs_enable_radio">Cellular</string>
-    <string name="prefs_radio_summary">Show data roaming/band control
-(depending on device) (no indicator; takes you to the settings page.  Sorry,
-but only system apps can directly control these settings)</string>
+    <string name="prefs_enable_mobile_data">Mobile Data</string>
+    <string name="prefs_mobile_data_summary">Enable/disable mobile data
+(GRPS/EDGE/3G) connection.</string>
+    <string name="prefs_phone_radio">Cellular Radio</string>
+    <string name="prefs_phone_radio_summary">Turn phone cellular radio on/off
+(completely disables any phone-related functionality - calls,
+mobile data - but greatly imporves the battery life).</string>
     <string name="prefs_enable_wifi">WiFi</string>
     <string name="prefs_wifi_summary">Show WiFi control</string>
     <string name="prefs_enable_bluetooth">Bluetooth</string>
@@ -31,9 +34,7 @@ but only system apps can directly control these settings)</string>
     <string name="prefs_bluetooth_summary_nobt">Show Bluetooth control -- needs
 Android 2.0 or later</string>
     <string name="prefs_enable_gps">GPS</string>
-    <string name="prefs_gps_summary">Show GPS control (no indicator; takes you
-to the settings page.  Sorry, but only system apps can directly control
-the GPS)</string>
+    <string name="prefs_gps_summary">Enable/disable GPS receiver</string>
     <string name="prefs_enable_airplane">Airplane mode</string>
     <string name="prefs_airplane_summary">Show airplane mode control</string>
     <string name="prefs_enable_sync">Sync</string>
