--- a/Dazzle/res/values/strings.xml
+++ b/Dazzle/res/values/strings.xml
@@ -2,13 +2,13 @@
 
 <resources>
 
-    <string name="app_name">Dazzle</string>
+    <string name="app_name">BeDazzle</string>
     
     <!-- Widget names. -->
-    <string name="widget_11_name">Dazzle (1x1)</string>
-    <string name="widget_21_name">Dazzle (2x1)</string>
-    <string name="widget_31_name">Dazzle (3x1)</string>
-    <string name="widget_41_name">Dazzle (4x1)</string>
+    <string name="widget_11_name">BeDazzle (1x1)</string>
+    <string name="widget_21_name">BeDazzle (2x1)</string>
+    <string name="widget_31_name">BeDazzle (3x1)</string>
+    <string name="widget_41_name">BeDazzle (4x1)</string>
         
     <!-- Preferences. -->
     <string name="prefs_help">Choose which controls you would like to have
@@ -19,28 +19,40 @@ different controls.</string>
 with popup mode selection</string>
     <string name="prefs_enable_otringer">Ringer one-touch</string>
     <string name="prefs_otringer_summary">Show ring / silent / vibrate control
+    <string name="prefs_enable_radio">Cellular</string>
+    <string name="prefs_radio_summary">Show data roaming/band control
 with one-touch mode toggle</string>
+(depending on device) (no indicator; takes you to the settings page.  Sorry,
+but only system apps can directly control these settings)</string>
     <string name="prefs_enable_mobile_data">Mobile Data</string>
-    <string name="prefs_mobile_data_summary">Enable/disable mobile data
-(GRPS/EDGE/3G) connection.</string>
+    <string name="prefs_mobile_data_summary">Enable/disable already established
+mobile data (GRPS/EDGE/3G) connection. Not persistent (yet), if you turn callular
+radio on/off or reboot the phone mobile data will be enabled.
+Mobile data has to be turned on in system settings.</string>
     <string name="prefs_phone_radio">Cellular Radio</string>
     <string name="prefs_phone_radio_summary">Turn phone cellular radio on/off
 (completely disables any phone-related functionality - calls,
-mobile data - but greatly imporves the battery life).</string>
+mobile data - but greatly improves the battery life).</string>
     <string name="prefs_enable_wifi">WiFi</string>
     <string name="prefs_wifi_summary">Show WiFi control</string>
+    <string name="prefs_enable_wifi_ap">WiFi Tethering</string>
+    <string name="prefs_wifi_ap_summary">WiFi tethering on/off</string>
+    <string name="prefs_wifi_ap_summary_froyo">WiFi tethering needs Android 2.2
+or later</string>
     <string name="prefs_enable_bluetooth">Bluetooth</string>
     <string name="prefs_bluetooth_summary">Show Bluetooth control</string>
     <string name="prefs_bluetooth_summary_nobt">Show Bluetooth control -- needs
 Android 2.0 or later</string>
     <string name="prefs_enable_gps">GPS</string>
-    <string name="prefs_gps_summary">Enable/disable GPS receiver</string>
+    <string name="prefs_gps_summary">Enable/disable GPS Receiver</string>
     <string name="prefs_enable_airplane">Airplane mode</string>
     <string name="prefs_airplane_summary">Show airplane mode control</string>
     <string name="prefs_enable_sync">Sync</string>
     <string name="prefs_sync_summary">Show sync on/off control</string>
     <string name="prefs_sync_summary_nosync">Sync on/off control -- needs
 Android 2.0 or later</string>
+    <string name="prefs_auto_rotate">Auto-rotate screen</string>
+    <string name="prefs_auto_rotate_summary">Enable/disable screen auto rotation</string>
     <string name="prefs_enable_brightness">Brightness popup</string>
     <string name="prefs_brightness_summary">Show screen brightness control
 with popup mode selection</string>
