Dazzle: persistent mobile data and phone radio settings (experimental)

--- a/Dazzle/res/values/strings.xml
+++ b/Dazzle/res/values/strings.xml
@@ -87,6 +87,7 @@ one-touch with auto -- needs Android 2.0 or later</string>
     <string name="button_auto">Auto</string>
 
     <!-- Errors. -->
+    <string name="system_mobile_data_disabled">Mobile Data disabled in system settings</string>
     
 </resources>
 
