--- a/Dazzle/res/values/strings.xml
+++ b/Dazzle/res/values/strings.xml
@@ -26,13 +26,13 @@ with one-touch mode toggle</string>
 but only system apps can directly control these settings)</string>
     <string name="prefs_enable_mobile_data">Mobile Data</string>
     <string name="prefs_mobile_data_summary">Enable/disable already established
-mobile data (GRPS/EDGE/3G) connection. Not persistent (yet), if you turn callular
-radio on/off or reboot the phone mobile data will be enabled.
-Mobile data has to be turned on in system settings.</string>
+mobile data (GRPS/EDGE/3G) connection. The widget tries to remember the setup
+(experimental) and not interfere with the system controls.
+Mobile data has to be turned on in system settings in order to use this switch.</string>
     <string name="prefs_phone_radio">Cellular Radio</string>
-    <string name="prefs_phone_radio_summary">Turn phone cellular radio on/off
-(completely disables any phone-related functionality - calls,
-mobile data - but greatly improves the battery life).</string>
+    <string name="prefs_phone_radio_summary">Turn phone cellular radio on/off.
+Completely disables any phone-related functionality - calls,
+mobile data - but greatly improves the battery life.</string>
     <string name="prefs_enable_wifi">WiFi</string>
     <string name="prefs_wifi_summary">Show WiFi control</string>
     <string name="prefs_enable_wifi_ap">WiFi Tethering</string>
