Tricorder: removed issue tracker links.

--- a/Tricorder/res/values/strings.xml
+++ b/Tricorder/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="description">Turn your phone into a working tricorder.</string>
     
         
-    <string name="about_text"><b>Tricorder</b> by Ian Cameron Smith
-(headstay).  Inspired by:\n\
+    <string name="about_text"><b>Tricorder</b> by Ian Cameron Smith.
+Inspired by:\n\
 \n\
 • Jeff Jetton\'s Tricorder for Palm Pilot: http://www.jeffjetton.com/tricorder/\n\
 • Adge\'s LCARS site: http://www.lcars.org.uk/\n\
