--- a/On Watch/res/values/strings.xml
+++ b/On Watch/res/values/strings.xml
@@ -139,6 +139,7 @@ for more details.\n</string>
     <string name="passage_new">New</string>
     <string name="passage_edit">Edit</string>
     <string name="passage_delete">Delete</string>
+    <string name="passage_save">Save</string>
     <string name="lab_passage_start">Start:</string>
     <string name="lab_passage_end">End:</string>
     <string name="lab_passage_status">Status:</string>
@@ -148,10 +149,6 @@ for more details.\n</string>
     <string name="lab_passage_finished">Finished</string>
 
     <!-- Passage Editor. -->
-    <string name="passage_edit_title">Edit passage</string>
-    <string name="passage_new_title">Create passage</string>
-    <string name="passage_error_title">Error loading passage</string>
-    <string name="passage_done">Done</string>
     <string name="lab_passage_name">Name:</string>
     <string name="lab_passage_from">From:</string>
     <string name="lab_passage_to">To:</string>
