--- a/On Watch/res/values/strings.xml
+++ b/On Watch/res/values/strings.xml
@@ -52,6 +52,8 @@ for more details.\n</string>
     <string name="menu_chimes">Chimes</string>
     <string name="menu_alerts">Alerts</string>
     <string name="menu_prefs">Settings</string>
+    <string name="menu_backup">Backup...</string>
+    <string name="menu_restore">Restore...</string>
     <string name="menu_help">Help</string>
     <string name="menu_about">About</string>
     <string name="menu_eula">Disclaimer</string>
