Audalyzer: credits; bump version to 1.15.

--- a/Audalyzer/res/values/strings.xml
+++ b/Audalyzer/res/values/strings.xml
@@ -26,7 +26,7 @@ for more details.\n</string>
 
 
     <string name="about_text"><b>Audalyzer</b> by Ian Cameron Smith
-(headstay).\n\
+(headstay), with Sonagram display by Ozneb.\n\
 \n\
 For information and source code see the project home page.\n\
 \n\
