--- a/On Watch/res/values/strings.xml
+++ b/On Watch/res/values/strings.xml
@@ -58,6 +58,8 @@ for more details.\n</string>
     <string name="menu_about">About</string>
     <string name="menu_eula">Disclaimer</string>
     <string name="menu_exit">Exit</string>
+    <string name="menu_debug">Debug</string>
+    <string name="menu_debug_alerts">Alerts</string>
     
     <string name="menu_move_up">Move Up</string>
     <string name="menu_move_down">Move Down</string>
