--- a/Chime Timer/res/values/strings.xml
+++ b/Chime Timer/res/values/strings.xml
@@ -9,10 +9,12 @@
     <string name="menu_configure">Configure...</string>
     <string name="menu_help">Help...</string>
     <string name="menu_about">About...</string>
+    <string name="menu_exit">Quit</string>
 
     <!-- Buttons. -->
     <string name="but_start">Start</string>
     <string name="but_stop">Stop</string>
+    <string name="but_done">Done</string>
     
     <!-- Configurator. -->
     <string name="config_name">Configuration</string>
