--- a/Chime Timer/res/values/strings.xml
+++ b/Chime Timer/res/values/strings.xml
@@ -44,6 +44,11 @@ for more details.\n</string>
     
     <!-- Configurator. -->
     <string name="config_name">Configuration</string>
+    <string name="lab_name">Name:</string>
+    <string name="lab_pre">Pre-timer:</string>
+    <string name="lab_start">Start bell:</string>
+    <string name="lab_time">Time:</string>
+    <string name="lab_finish">End bell:</string>
       
     <!-- Service. -->
     <string name="service_title">Chime Timer</string>
@@ -51,6 +56,9 @@ for more details.\n</string>
     <string name="service_pre">Timer countdown</string>
     <string name="service_running">Timer running</string>
     <string name="service_finished">Timer finished</string>
+        
+    <!-- Help. -->
+    <string name="help_title">Chime Timer User\'s Manual</string>
     
 </resources>
 
