--- a/On Watch/res/values/strings.xml
+++ b/On Watch/res/values/strings.xml
@@ -191,13 +191,19 @@ now?</string>
     <string name="weather_turn_rising">barometer started rising</string>
     <string name="weather_falling">barometer falling</string>
     <string name="weather_turn_falling">barometer started falling</string>
-    <string name="weather_rate_0">steady</string>
-    <string name="weather_rate_slow">slowly</string>
-    <string name="weather_rate_mod">quite quickly</string>
-    <string name="weather_rate_quick">quickly</string>
-    <string name="weather_rate_very">very quickly</string>
-    <string name="weather_rate_extreme">extremely fast</string>
-    <string name="weather_rate_insane">incredibly fast</string>
+    <string name="weather_steady">barometer steady</string>
+    <string name="weather_fall_slow">barometer falling slowly</string>
+    <string name="weather_fall_mod">barometer falling quite quickly</string>
+    <string name="weather_fall_quick">barometer falling quickly</string>
+    <string name="weather_fall_very">barometer falling very quickly</string>
+    <string name="weather_fall_extreme">barometer falling extremely fast</string>
+    <string name="weather_fall_insane">barometer falling incredibly fast</string>
+    <string name="weather_rise_slow">barometer rising slowly</string>
+    <string name="weather_rise_mod">barometer rising quite quickly</string>
+    <string name="weather_rise_quick">barometer rising quickly</string>
+    <string name="weather_rise_very">barometer rising very quickly</string>
+    <string name="weather_rise_extreme">barometer rising extremely fast</string>
+    <string name="weather_rise_insane">barometer rising incredibly fast</string>
     <string name="weather_low_0">pressure normal</string>
     <string name="weather_low_1">pressure low</string>
     <string name="weather_low_2">pressure very low</string>
@@ -213,8 +219,7 @@ now?</string>
     <string name="weather_v_low_2">Barometric pressure is very low</string>
     <string name="weather_v_low_3">Barometric pressure is extremely low</string>
     <string name="weather_v_low_4">Are we up a mountain or what?</string>
-    <string name="weather_v_low_5">We\'re in space...   Space...
-We\'re in   space....</string>
+    <string name="weather_v_low_5">We\'re in space</string>
     <string name="weather_v_high_2">Barometric pressure is very high</string>
     <string name="weather_v_high_3">Barometric pressure is extremely high</string>
     <string name="weather_v_high_4">we\'re underwater</string>
